<resources>
    <string name="srl_keep_pull_up">继续向上拉</string>
    <string name="srl_keep_pull_down">继续向下拉</string>
    <string name="srl_release_to_refresh">松开刷新</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="district_demo">行政区划查询</string>
    <string name="move_the_camera">移动camera</string>
    <string name="tap_instructions">点击或者长按地图</string>
    <string name="gravity_left">left</string>
    <string name="gravity_center">center</string>
    <string name="gravity_right">right</string>
    <string name="review_image">查看照片</string>
    <string name="add_review_image">添加照片</string>
    <string name="crop__saving">Saving picture…</string>
    <string name="crop__wait">Please wait…</string>
    <string name="crop__pick_error">No image sources available</string>
    <string name="crop__done">DONE</string>
    <string name="crop__cancel">CANCEL</string>
    <string name="label_cancel">取消</string>
    <string name="label_ok">确定</string>
    <string name="permission_title_rationale">权限需求</string>
    <string name="permission_read_storage_rationale">选择图片时需要读取权限</string>
    <string name="permission_write_storage_rationale">拍照时需要存储权限</string>
    <string name="update_version_now">立即更新</string>
    <string name="update_version">升级</string>
    <string name="do_not_update">暂不升级</string>
    <string name="update_no_need">当前为最新版本</string>
    <string name="update_failed">升级失败，请稍后重试</string>
    <string name="update_wait_downloading">正在下载最新版本，请稍候…</string>
    <string name="update_is_checking">正在检查升级中，请勿频繁操作</string>
    <string name="update_version_word">版本特性</string>
    <string name="update_force_title">您的程序版本过低，请升级</string>
    <string name="update_normal_title">发现新的版本啦</string>
    <string name="now_downloading_upgrade">正在下载更新</string>
    <string name="downloading">下载中</string>
    <string name="have_paused">已暂停</string>
    <string name="paused">暂停</string>
    <string name="continu">继续</string>
    <string name="favorite_list_item_state_invalid">失效</string>
    <string name="gallery_image_save">确定要保存图片？</string>
    <string name="feed_has_save_to_album">已保存至：</string>
    <string name="save_image_failure">图片保存失败</string>
    <string name="take_photo">现在拍照</string>
    <string name="pick_from_album">从图库中选取</string>
    <string name="photo">照片</string>
    <string name="nodata">无数据...</string>
    <string name="reload">重新加载试试</string>
    <string name="is_checking_version_update">正在检查版本更新..</string>
    <string name="the_version_is_new">当前为最新版本</string>
    <string name="please_update_app_to_version">请升级APP至版本</string>
    <string name="sd_card_is_disable">SD卡不可用，请插入SD卡</string>
    <string name="is_download">正在下载</string>
    <string name="please_waiting">请等待..</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="car_use_title">我要用车</string>
    <string name="destination_button">输入目的地</string>
    <string name="cancel_button">取消</string>
    <string name="destination_title">请输入目的地</string>
    <string name="contact_message">我司在该地区暂时没有驻点经纪为您提供验苗服务，您可联系客服咨询跨区域验苗事宜。</string>
    <string name="good_count">x %d</string>
    <string name="price">￥%s</string>
    <string name="total_0">合计：￥0.00</string>
    <string name="total">合计：￥%s</string>
    <string name="jiesuan_0">付款（0）</string>
    <string name="xiadan_0">下单（0）</string>
    <string name="jiesuan">付款（%s）</string>
    <string name="yanmiao">验苗（%s）</string>
    <string name="xiadan">下单（%s）</string>
    <string name="cart_title_0">购物车(0)</string>
    <string name="cart_title">购物车(%s)</string>
    <string name="placeHolder">placeHolder</string>
    <string name="seekbar_add">+</string>
    <string name="seekbar_minus">-</string>
    <string name="create">生成</string>
    <string name="scan_failed">扫描失败</string>
    <string name="bottom_hint">建议与镜头保持10CM距离，尽量避免逆光和阴影</string>
    <string name="top_hint">将条形码或二维码置于取景框内系统会自动扫描</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="button_ok">确定</string>
    <string name="set_detail">修改信息</string>
    <string name="exit_back">撤回</string>
    <string name="up_data">上架</string>
    <string name="finish_data">下架</string>
    <string name="stay_time">延期</string>
    <string name="car">购物车</string>
    <string name="add_car">加入购物车</string>
    <string name="sure_to_exit">是否确定退出？</string>
    <string name="close_str">关闭</string>
    <string name="please_input_right_tel">请输入正确的电话号码</string>
    <string name="cur_page">%1$d/%2$d</string>
    <string name="image_priview">预览</string>
    <string name="source_image_str">原图</string>
    <string name="image_size_is_too_big_to_send">图片不能大于10M</string>
    <string name="had_no_pass_certify">您还未通过认证</string>
    <string name="no_reason">未填写原因</string>
    <string name="please_selector">请选择</string>
    <string name="double_click">再按一次返回键退出</string>
    <string name="photo_album_title">相册</string>
    <string name="get_photo_album_failure">获取相册信息失败</string>
    <string name="choose_pic_is_full">最多选择10张图片</string>
    <string name="cannot_select_pic">无可用的应用！</string>
    <string name="photo_take_pic">拍照</string>
    <string name="photo_take_pic_again">重拍</string>
    <string name="image_load_failure">图片文件加载失败！</string>
    <string name="more">更多</string>
    <string name="all">全部</string>
    <string name="project">项目</string>
    <string name="project_item">项目:</string>
    <string name="stayTuned">敬请期待！</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failure">删除失败</string>
    <string name="cancel">取消</string>
    <string name="custom">自定义</string>
    <string name="confirm_sure">确定</string>
    <string name="please_wait">请稍等</string>
    <string name="net_unavailable">网络不可用</string>
    <string name="sdcard_is_unmount">未发现SD卡</string>
    <string name="sdcard_is_full">SD卡空间不足</string>
    <string name="no_app_can_use">无可用的应用</string>
    <string name="image_load_failed">图片加载失败</string>
    <string name="please_choose_static_pic">请选择静态图片</string>
    <string name="default_progressbar">Default Progressbar:</string>
    <string name="dialog_default_title">Here\'s a message!</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="LOADING">Loading...</string>
    <string name="default_loading">Loading…</string>
    <string name="app_name">花木易购</string>
    <string name="tab_a_text">首页</string>
    <string name="tab_b_text">商城</string>
    <string name="tab_c_text">发布</string>
    <string name="tab_d_text">购物车</string>
    <string name="tab_e_text">我的</string>
    <string name="store_setting">店铺设置</string>
    <string name="store_domain">店铺域名：</string>
    <string name="store_name">店铺名称：</string>
    <string name="store_logo">APP店铺Logo和横幅：</string>
    <string name="store_detail">店铺简介：</string>
    <string name="store_type">经营品种：</string>
    <string name="store_introduction">店铺介绍</string>
    <string name="store_cant_reset">创建后不可修改</string>
    <string name="store_set_a_good_domain">取个好名字很重要，例如：hmyg</string>
    <string name="store_set_a_good_name">取个好名字很重要</string>
    <string name="store_limmit_100">不超过100个字</string>
    <string name="store_limmit_250">不超过250个字</string>
    <string name="store_format_01">文件格式：gif，JPG，PNG，JPEG 文件大小80k以内，建议尺寸120*120px</string>
    <string name="store_format_02">文件格式：gif，JPG，PNG，JPEG 文件大小80k以内，建议尺寸640*320px</string>
    <string name="error_net">网络异常，请检查网络后重试</string>
    <string name="cactivity_manager">发布管理</string>
    <string name="cactivity_public_sale">发布苗木</string>
    <string name="cactivity_public_buy">发布采购</string>
    <string name="bactivity_choose_type">分类</string>
    <string name="bactivity_choose_time">时间</string>
    <string name="bactivity_choose_price">价格</string>
    <string name="bactivity_choose_screen">筛选</string>
    <string name="eactivity_buyer">我是买家</string>
    <string name="eactivity_saler">我是卖家</string>
    <string name="eactivity_broker">我是经纪</string>
    <string name="eactivity_personal_profile">个人资料</string>
    <string name="eactivity_message_notification">消息通知</string>
    <string name="eactivity_invent_friends">分享APP</string>
    <string name="eactivity_custom_hot_online">客服热线</string>
    <string name="eactivity_user_feedback">用户反馈</string>
    <string name="manager_all">全部</string>
    <string name="manager_unaudit">审核中</string>
    <string name="manager_published">已上架</string>
    <string name="manager_outline">已下架</string>
    <string name="manager_backed">被退回</string>
    <string name="manager_unsubmit">未提交</string>
    <string name="nursery_address">苗源地址</string>
    <string name="sellect">筛选</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="login">登录</string>
    <string name="input_username_or_phone_number">请输入手机号码/用户名</string>
    <string name="input_phone_number">请输入11位手机号码</string>
    <string name="input_new_phone_number">请输入11位的新手机号码</string>
    <string name="input_passward">密码须在6—15位字符</string>
    <string name="register">免费注册</string>
    <string name="find_passward">找回密码</string>
    <string name="register_account">注册账户</string>
    <string name="phone_code">手机验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="inventer_phone">邀请人手机（选填）</string>
    <string name="already_had_acount">已有账号，马上登录></string>
    <string name="already_read">我已阅读</string>
    <string name="server_protocol">《花木易购服务协议》</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="basic_action_1">删除</string>
    <string name="basic_action_2">Action_2</string>
    <string name="basic_del">Delete</string>
    <string name="str_orange">#fe7b27</string>
    <string name="str_green">#3cac69</string>
    <string name="str_red">#FF4444</string>
    <string name="str_yellow">#FFBB33</string>
    <string name="str_sky_blue">#33B5E5</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="out">退出</string>
    <string name="out_msg">您确定要退出软件吗？</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="search_content">找苗/报价/店铺</string>
    <string name="test_contnent">用户研究的方法，真正地帮助我们去理解产品的用户。

1. 观念＆原则

这就涉及到一些必须建立的基本观念，其中特别重要的一点就是我们要知道用户的问题在哪里，并且要理解用户问题背后的原因而不是照搬他们的意见。如果你去问一个用户对于产品有什么意见，用户说完了你回去照着做，可能明天遇到另一个用户又是不同的意见，这时候你该怎么办？所以我们要真正深入去了解他们为什么要这样说，而不是通过照搬用户的意见去改进产品。还有一些我们在做用户研究时使用的具体方法，我们要确保没有影响到用户，不诱导用户，而是以各种各样的方式间接地观察他们，去审视他们行为背后的原因。比如说我们在网上去做问卷调查，或者说直接上微博搜索用户各种各样的反馈，甚至直接去看很多用户行为背后的数据，目的都是为了排除干扰，找到真正影响用户的因素。

2. 关于用户

关于用户定位其实有很多可以划分的地方。比如说我们去看一些类似于《About face》的书时，会发现它们把用户分成了新手用户、中间用户和专</string>
</resources>