<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_weight="1.0" />

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.0"
                android:visibility="gone" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1.0px"
                android:background="@color/gray_line" />

            <RadioGroup
                android:id="@+id/rg_tab"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/tab_a"
                    style="@style/tab_hdpi"
                    android:checked="true"
                    android:drawableTop="@drawable/tab_home_a"
                    android:text="@string/tab_a_text" />

                <RadioButton
                    android:id="@+id/tab_b"
                    style="@style/tab_hdpi"
                    android:drawableTop="@drawable/tab_home_b"
                    android:text="@string/tab_b_text" />

                <RadioButton
                    android:id="@+id/tab_c"
                    style="@style/tab_hdpi"
                    android:drawableTop="@drawable/tab_home_c"
                    android:text="@string/tab_c_text" />

                <RadioButton
                    android:id="@+id/tab_d"
                    style="@style/tab_hdpi"
                    android:drawableTop="@drawable/tab_home_d"
                    android:text="@string/tab_d_text" />
                <RadioButton
                    android:id="@+id/tab_e"
                    style="@style/tab_hdpi"
                    android:drawableTop="@drawable/tab_home_e"
                    android:text="@string/tab_e_text" />
            </RadioGroup>
        </LinearLayout>
    </TabHost>

</FrameLayout>