<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="15dip"
            android:gravity="center"
            android:background="@drawable/green_btn_selector"
            android:text="@string/take_photo"
            android:textColor="@color/main_color"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_pick_photo"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="13dip"
            android:background="@drawable/green_btn_selector"
                   android:gravity="center"
            android:text="@string/pick_from_album"
            android:textColor="@color/main_color"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="15dip"
                   android:gravity="center"
            android:layout_marginLeft="15dip"
            android:layout_marginRight="15dip"
            android:layout_marginTop="13dip"
            android:background="@drawable/red_btn_selector"
            android:text="@string/cancel"
            android:textColor="@color/red"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>