<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.hldj.hmyg.saler.StoreSettingActivity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/y34"
        android:background="@color/white" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/store_setting"
            android:textColor="@color/main_color"
            android:textSize="@dimen/x18" />

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/x24"
            android:layout_height="@dimen/x24"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x10"
            android:background="@drawable/btn_back" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/x12" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y8" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/store_domain"
                    android:textSize="@dimen/x15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/x2"
                    android:text="@string/store_cant_reset"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/x11" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/ll_ed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/y26"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/x7" >

                <EditText
                    android:id="@+id/et_domain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:digits="0123456789abcdefghijklmnopqrstuvwxyz"
                    android:gravity="center_vertical"
                    android:hint="最好输入4个数字或者字符组成的字符"
                    android:textColor="@color/main_color"
                    android:textSize="@dimen/y10" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/x2"
                android:text="示例：如输入abad,则浏览器输入abcd.hmef.cn可直接访问您的店铺！"
                android:textColor="@color/gray"
                android:textSize="@dimen/x11" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y8" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/store_name"
                    android:textSize="@dimen/x15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/x2"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/x11" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/y26"
                android:background="@drawable/store_edit_selector"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/x7" >

                <EditText
                    android:id="@+id/et_store_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/store_set_a_good_name"
                    android:textColor="@color/main_color"
                    android:textColorHint="@color/main_color"
                    android:textSize="@dimen/y10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y8" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/store_logo"
                    android:textSize="@dimen/x15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/x2"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/x11" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/x4"
                android:background="@null"
                android:gravity="center_vertical"
                android:text="@string/store_format_01"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/y10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="@dimen/y70"
                    android:layout_height="@dimen/y70"
                    android:scaleType="fitXY"
                    android:src="@drawable/store_seller_logo" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/x4"
                android:background="@null"
                android:gravity="center_vertical"
                android:text="@string/store_format_02"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/y10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_banner"
                    android:layout_width="@dimen/x150"
                    android:layout_height="@dimen/x75"
                    android:scaleType="fitXY"
                    android:src="@drawable/store_seller_banner" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y8" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/store_detail"
                    android:textSize="@dimen/x15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/x2"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/x11" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/store_edit_selector"
                android:minHeight="@dimen/y96"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/x7" >

                <EditText
                    android:id="@+id/et_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/x4"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/store_limmit_100"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/y10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y8" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/store_type"
                    android:textSize="@dimen/x15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/x2"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/x11" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/store_edit_selector"
                android:minHeight="@dimen/y49"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/x7" >

                <EditText
                    android:id="@+id/et_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/x4"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/y10" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y8"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/store_introduction"
                    android:textSize="@dimen/x15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/x2"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/x11" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/store_edit_selector"
                android:minHeight="@dimen/y96"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/x7"
                android:visibility="gone" >

                <EditText
                    android:id="@+id/et_introduction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/x4"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/store_limmit_250"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/y10" />
            </LinearLayout>

            <com.neopixl.pixlui.components.textview.TextView
                android:id="@+id/sure"
                style="@style/NoActionBarTheme.TextHuaWenXiHei"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/x37"
                android:layout_marginLeft="@dimen/x10"
                android:layout_marginRight="@dimen/x10"
                android:layout_marginTop="@dimen/x10"
                android:background="@drawable/register_btn_selector"
                android:gravity="center"
                android:text="@string/ok"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="@dimen/y11" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>